# ros_arduino

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
cfg/: MotorGains.cfg
config/: default.yaml  rover5.yaml
firmware/two_wheel_base/: DFRobotL298PShield_config.h  PololuMC33926_config.h  motor_driver_config.h  two_wheel_base.ino  user_config.h
include/ros_arduino_base/: ros_arduino_base.h
launch/: base_bringup.launch
ros_arduino/: CMakeLists.txt  package.xml
ros_arduino_base/: CMakeLists.txt  README.md  package.xml
ros_arduino_base/config/: default.yaml  rover5.yaml
ros_arduino_base/firmware/: install_ros_lib.sh
ros_arduino_base/firmware/libraries/: .gitignore
ros_arduino_base/firmware/two_wheel_base/: DFRobotL298PShield_config.h  PololuMC33926_config.h  accelerometer_ADXL345.h  gyroscope_ITG3205.h  gyroscope_L3G4200D.h  imu_wire.h  motor_driver_config.h  two_wheel_base.ino  user_config.h
ros_arduino_base/include/ros_arduino_base/: ros_arduino_base.h
ros_arduino_base/launch/: base_bringup.launch
ros_arduino_base/src/: ros_arduino_base.cpp  ros_arduino_base_node.cpp
ros_arduino_base/srv/: UpdateGains.srv
ros_arduino_imu/: .gitignore  CMakeLists.txt  README.md  package.xml
ros_arduino_imu/firmware/: install_ros_lib  install_ros_lib.sh
ros_arduino_imu/firmware/libraries/: .gitignore
ros_arduino_imu/firmware/ros_raw_imu/: accelerometer.h  accelerometer_ADXL345.h  accelerometer_MPU6050.h  gyroscope.h  gyroscope_ITG3205.h  gyroscope_L3G4200D.h  gyroscope_MPU6050.h  imu_configuration.h  imu_wire.h  magnetometer.h  magnetometer_HMC5883L.h  magnetometer_MPU6050.h  ros_raw_imu.ino
ros_arduino_imu/firmware/ros_raw_imu_MPU6050/: ros_raw_imu_MPU6050.ino
ros_arduino_imu/include/ros_arduino_imu/: raw_imu_bridge.h
ros_arduino_imu/launch/: imu_ahrs.launch  run_filter.launch
ros_arduino_imu/scripts/: simple_magnometer_calibration
ros_arduino_imu/src/: arduino_magnometer_calibration.cpp  raw_imu_bridge.cpp  raw_imu_bridge_node.cpp
ros_arduino_msgs/: CMakeLists.txt  README.md  package.xml
ros_arduino_msgs/msg/: BaseFeedback.msg  BaseStatus.msg  CmdDiffVel.msg  Drive.msg  Encoders.msg  Feedback.msg
ros_arduino_sonar/: CMakeLists.txt  package.xml
ros_arduino_sonar/firmware/HC-SR04/: HC-SR04_Double.ino~  HC-SR04_Double_Trigger.ino
ros_arduino_sonar/firmware/HC-SR04/HC-SR04_Double/: HC-SR04_Double.ino
ros_arduino_sonar/firmware/ROSSERIAL/: ROSSERIAL.ino
ros_arduino_sonar/firmware/ROSSERIAL_RunningAvg/: ROSSERIAL_RunningAvg.ino
ros_arduino_sonar/firmware/ROSSERIAL_RunningAvg_imu/: ROSSERIAL_RunningAvg_imu.ino
ros_arduino_sonar/launch/: sonar_ahrs.launch  sonar_ahrs.launch~  sonar_imu_ahrs.launch
src/: ros_arduino_base.cpp  ros_arduino_base_node.cpp
srv/: UpdateGains.srv
