<?xml version="1.0"?>
<package>
  <name>ros_arduino_msgs</name>
  <version>0.0.0</version>
  <description>The lighter version of ROS messages for Arduino</description>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>
  <license>BSD</license>
  <author email="tony.baltovski@gmail.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
